# PowerAnalyser

./: CMakeLists.txt  ControllerMain.cpp  ControllerMain.h  Device.cpp  Device.h  MainWindow.h  ModelMain.cpp  ModelMain.h  Observer.h  PowerAnalyser.cpp  PowerAnalyser.h  SaveFile.cpp  SaveFile.h  Subject.h  Ui_MainWindow.h  ViewMain.cpp  ViewMain.h  main.cpp
